--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@iwonz/myarena-ru-nodejs-api",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Library for using server API in MyArena.ru hosting",
   "repository": "https://github.com/iwonz/myarena-ru-nodejs-api.git",
   "author": "iwonz",
@@ -35,9 +35,9 @@
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.0",
+    "np": "*",
     "prettier": "^2.1.2",
-    "typescript": "^4.0.5",
-    "np": "*"
+    "typescript": "^4.0.5"
   },
   "dependencies": {
     "axios": "^0.21.0"
