--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
-/dist
-/node_modules
+dist
+**/node_modules
+.npmrc
+package-lock.json
 
 # System Files
 .DS_Store
 Thumbs.db
 
 # IDEs and editors
-/.idea
+.idea/
 .project
 .classpath
 .c9/
@@ -27,3 +29,8 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.js
