--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,16 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "target": "ES2015",
+    "module": "ES2020",
+    "strict": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "lib": [
-      "es6",
-      "es2015"
-    ],
-    "types": [
-      "node"
-    ],
+    "moduleResolution": "node",
+    "forceConsistentCasingInFileNames": true,
+    "outDir": "./dist/esm",
     "declaration": true,
-    "outDir": "dist",
-    "rootDir": "src",
-    "strict": true
+    "declarationDir": "./dist/typings"
   },
-  "exclude": [
-    "dist",
-    "node_modules"
-  ],
   "include": [
-    "src"
+    "./src"
   ]
 }
