--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@iwonz/myarena-ru-nodejs-api",
   "version": "1.0.8",
   "description": "Library for using server API in MyArena.ru hosting",
+  "keywords": ["myarena.ru api"],
   "repository": "https://github.com/iwonz/myarena-ru-nodejs-api.git",
   "author": "iwonz <iwonz@yandex.ru>",
   "license": "MIT",
