--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@iwonz/myarena-ru-nodejs-api",
-  "version": "1.0.8",
+  "version": "2.0.1",
   "description": "Library for using server API in MyArena.ru hosting",
-  "keywords": ["myarena.ru api"],
+  "keywords": [
+    "myarena.ru api"
+  ],
   "repository": "https://github.com/iwonz/myarena-ru-nodejs-api.git",
   "author": "iwonz <iwonz@yandex.ru>",
   "license": "MIT",
